<resources>
    <string name="app_name">MicroAppLibrary</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_most_wanted">PRODUTOS MAIS PROCURADOS</string>
    <string name="open">Abrir</string>
    <string name="start">Início</string>
    <string name="products">Produtos</string>
    <string name="cart">Carrinho</string>
    <string name="search">Search</string>
    <string name="filter">Filtro</string>

    <string name="filters_spinner_prompt">Selecione uma opção</string>
    <string name="product_detail">DETALHES DO PRODUTO</string>
    <string name="filters">Filtros</string>
    <string name="category">Categoria</string>
    <string name="category_filter">CATEGORIA</string>
    <string name="size">Tamanho</string>
    <string name="color">Cor</string>
    <string name="gender">Genêro</string>
    <string name="brand">Brand</string>
    <string name="price">Preço</string>
    <string name="results_count">1080 RESULTADOS</string>
    <string name="apply_filter">APLICAR FILTRO</string>
    <string name="clear_fields">Limpar Filtro</string>
    <string name="top_selling_products">PRODUTOS MAIS VENDIDOS</string>

    <string-array name="filters_spinners_arrays">
        <item>A - Z</item>
        <item>Z - A</item>
        <item>Popularidade</item>
        <item>Menor Preço</item>
        <item>Maior Preço</item>
    </string-array>

</resources>
